tests/ui/const-generics/issues/issue-71382.full.stderr
error[E0741]: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-71382.rs:16:23
   |
LL |     fn test<const FN: fn()>(&self) {
   |                       ^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0741`.
